add calender functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <div class="container">
         <div id="todo-app">
-            <h2>To-Do List <img src="https://cdn2.iconfinder.com/data/icons/shopping-set-02/512/31.png" alt=""></h2>
+            <h2>To-Do List <img src="https://cdn2.iconfinder.com/data/icons/shopping-set-02/512/31.png" alt="">
+                <span id="dateEl" onclick="showDate()"><img src="https://cdn1.iconfinder.com/data/icons/time-schedule-call-weather-contact-3d-blue-illustr/256/9.png" alt=""></span>
+            </h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Your Text">
                 <button onclick="addTask()"><img src="https://cdn0.iconfinder.com/data/icons/3d-items-vol-2/512/Plus_sign_add.png" alt=""></button>
